--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     }
 </style>
 <body>
-    <p> This is just another demo website for github pages.</p>
-    <p> No fancy pant here!</p>
+    <p> All the changes are on the way.</p>
+    <p> Thanks for your patience.</p>
 </body>
 <footer>
     <p>Author: Sayf</p>
